fix scrollbar for windows

--- a/src/components/scss/AgentModal.scss
+++ b/src/components/scss/AgentModal.scss
@@ -1,6 +1,6 @@
 :root {
   --subtext-color: rgba(84, 84, 84, 0.88);
-  --theme-label-tertiary: #a8b3cf;
+  --theme-label-tertiary: rgba(134, 134, 134, 0.65);
 }
 
 * {
@@ -9,21 +9,20 @@
 }
 
 .modal-container {
-  //display: none; /* Hidden by default */
   text-align: -webkit-center;
-  position: fixed; /* Stay in place */
-  z-index: 10; /* Sit on top */
+  position: fixed;
+  z-index: 10;
   display: flex;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  background-color: rgb(0, 0, 0); /* Fallback color */
+  width: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   overflow-y: hidden;
   align-items: center;
   justify-content: center;
   -ms-overflow-style: none; /* IE and Edge */
+
   &::-webkit-scrollbar {
     width: 8px;
     background-color: transparent;
@@ -37,18 +36,13 @@
   &::-webkit-scrollbar-track {
     background: transparent;
   }
-}
 
-@media (max-width: 768px) {
-  .modal-content {
-    flex-direction: column;
-  }
 }
 
 .modal-content {
   display: flex;
   overflow: scroll;
-  position: relative;
+  position: fixed;
   width: 90%;
   max-height: 500px;
   height: 90%;
@@ -60,6 +54,28 @@
 
   &::-webkit-scrollbar {
     display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .modal-content {
+    flex-direction: column;
+    overflow-y: overlay;
+
+    &::-webkit-scrollbar {
+      width: 8px;
+      display: unset;
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 4px;
+      background: var(--theme-label-tertiary);
+    }
+
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
   }
 }
 
@@ -112,15 +128,16 @@
   position: relative;
   margin: 8px;
   padding: 5px;
-  overflow-y: scroll;
+  overflow-y: overlay;
   overflow-x: hidden;
   -ms-overflow-x: hidden;
   border: 1px solid black;
   border-radius: 10px;
   flex-wrap: nowrap;
-  
+
   &::-webkit-scrollbar {
     width: 8px;
+    height: 10px;
     background-color: transparent;
   }
 
